		  03-05-19  Bfo		Allocate 512k blocks / Additional parameter <mem_fulldisp> for "show_mem"
		  03-05-19	Bfo/luz Start with Codewarrior 8 support
		  03-05-20  Bfo     Use "procid_special.h" with *except[10] instead of *_except[10]
		  03-05-20  Bfo		#define CW8_MWERKS 0x3000 // V 3.0   = CW Pro 8
		  03-05-21	Bfo		Preparations for seteuid on Mac OS X
		  03-05-21  bfo		Some more MACH-O adaptions, still not able to compile
    3.22  03-??-??  Bfo
    -------------------
*/




/* unresolved bugs: */
/*
    !!  "_" name convention on Windows (hawk_C0).
    !!  "show" is using some unimplemented FPU calls.
    
    -   MPW uses its I/O currently partly also for the tty/pty system.
    -   "mgencas" will not startup over network (Linux), "mme" has also problems.
    -   Linux telnet close still quits emulator (recognition of end cond not correctly)
    -   "inetd" superdaemon is not yet running correctly.
    -   Mouse movements on XServer (Mac) still slow and jumpy.
    -   MGP slow startup problems (NT 4.0).
    -   A$AtDate restricted to 248 days / will not adjust when system time changes

   (+)  Take tty00/pty00 first (problems with arbitration)
   (+)  setime_Y2K version with param passing --> 1900
   (-)  'pragma unused' not possible with gcc (Linux): cuts the file there !!
*/


/* To do: */
/*
    -   RBF disk cache not yet implemented.
    -   RBF: do read only, if write larger than a sector
    -   SCSI subsystem for Linux
    -   direct line editing on linux (over network)
    -   inode support instead of file lists for Windows file access, at least faster lists
    -   CtrlC/CtrlE support for Linux not yet done
    -   Console echo off mode for Linux not implemented.
    -   gs_ready Linux for CR
    -   Faster directory read (Windows)
    -   Implement internal command "ls" in UNIX style: "ls -la".
    -   <in_recursion> for debug load
    -   btree for Mac
    -   btree optimisation
    -   termcap support for the DOS window.